@@ -53,7 +53,7 @@
     ;; The wrapper on windows cannot handle `=' signs,
     ;; gs has a workaround with #.
     (if (eq? PLATFORM 'windows)
-	(set! cmd (string-regex-substitute "=" "#" cmd)))
+	(set! cmd (string-regexp-substitute "=" "#" cmd)))
 
     (if (access? pdf-name W_OK)
 	(delete-file pdf-name))
